k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: gvk-platform-dev
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
